--- a/project.json
+++ b/project.json
@@ -120,7 +120,7 @@
         "action": {
           "type": "uri",
           "label": "搜狗Demo",
-          "uri": "https://www.youtube.com/watch?v=vMaJdFYFJ3M"
+          "uri": "https://www.youtube.com/watch?v=2mlyVbPb6MA&t=2s"
         },
         "flex": 2
       }
